[gd_scene load_steps=9 format=3 uid="uid://ca74s0bcqwtuj"]

[ext_resource type="Script" path="res://Scenes/Levels/main_scene.gd" id="1_mcf8h"]
[ext_resource type="Texture2D" uid="uid://2dd43e32kcu2" path="res://assets/env/MainBG.png" id="1_o8xrx"]
[ext_resource type="PackedScene" uid="uid://1rl4k4s8jcr3" path="res://Scenes/LevelButton/level_button.tscn" id="2_lgk5k"]
[ext_resource type="FontFile" uid="uid://bd8eo6wiwrb8e" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_505sw"]
[ext_resource type="AudioStream" uid="uid://dhu6tk41bsho" path="res://assets/audio/birdsong.wav" id="4_6cexp"]
[ext_resource type="Texture2D" uid="uid://h5mgl24wcfwl" path="res://assets/ui/panel_beige.png" id="6_8tmv3"]

[sub_resource type="LabelSettings" id="LabelSettings_o1ipf"]
font = ExtResource("3_505sw")
font_size = 96
font_color = Color(0, 0.992157, 0.941176, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fbaec"]
font = ExtResource("3_505sw")
font_size = 18
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mcf8h")

[node name="MainBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o8xrx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="LevelButton" parent="HBoxContainer" instance=ExtResource("2_lgk5k")]
layout_mode = 2

[node name="LevelButton2" parent="HBoxContainer" instance=ExtResource("2_lgk5k")]
layout_mode = 2
levelNumber = 2

[node name="LevelButton3" parent="HBoxContainer" instance=ExtResource("2_lgk5k")]
layout_mode = 2
levelNumber = 3

[node name="LevelButton4" parent="HBoxContainer" instance=ExtResource("2_lgk5k")]
layout_mode = 2
levelNumber = 4

[node name="LevelButton5" parent="HBoxContainer" instance=ExtResource("2_lgk5k")]
layout_mode = 2
levelNumber = 5

[node name="LevelButton6" parent="HBoxContainer" instance=ExtResource("2_lgk5k")]
layout_mode = 2
levelNumber = 6

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -353.5
offset_right = 353.5
offset_bottom = 97.0
grow_horizontal = 2
rotation = 0.0698132
theme_override_constants/margin_top = 20

[node name="MainSceneTitle" type="Label" parent="MC"]
layout_mode = 2
text = "ANGRY ANIMALS"
label_settings = SubResource("LabelSettings_o1ipf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainSceneMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6cexp")
autoplay = true

[node name="TB_Tutorial" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 128.0
offset_right = 50.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("6_8tmv3")

[node name="MC_TB" type="MarginContainer" parent="TB_Tutorial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Info" type="Label" parent="TB_Tutorial/MC_TB"]
layout_mode = 2
text = "Tutorial
"
label_settings = SubResource("LabelSettings_fbaec")
horizontal_alignment = 1

[connection signal="mouse_entered" from="TB_Tutorial" to="." method="_on_tb_tutorial_mouse_entered"]
[connection signal="mouse_exited" from="TB_Tutorial" to="." method="_on_tb_tutorial_mouse_exited"]
[connection signal="pressed" from="TB_Tutorial" to="." method="_on_tb_tutorial_pressed"]
